benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_Add_DivMod_Zeroes_iter4_error.log
=== Verification Error - Iteration 4 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_Zeroes.rs
Time: 2025-09-15 10:55:15

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:28:13
   |
28 |     ensures result == Str2Int(s@) as int,
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:42:13
   |
42 |     ensures result == ((Exp_int((base % mod_) as nat, exp as nat) % mod_ as nat)) as int,
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:67:28
   |
67 |     ensures ValidBitString(result@),
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:68:17
   |
68 |         Str2Int(result@) == x as nat,
   |                 ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:28:13
   |
28 |     ensures result == Str2Int(s@) as int,
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:42:13
   |
42 |     ensures result == ((Exp_int((base % mod_) as nat, exp as nat) % mod_ as nat)) as int,
   |             ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:67:28
   |
67 |     ensures ValidBitString(result@),
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_Add_DivMod_Zeroes_impl.rs:68:17
   |
68 |         Str2Int(result@) == x as nat,
   |                 ^^^^^^ not found in this scope

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
